# codegraff

./: .gitignore  .zigrep_archive  AGENTS.md  Cargo.toml  LICENSE  README.md  architecture.md  flake.nix  forge.schema.json
.github/: labels.json
.github/workflows/: ci.yml  release.yml  sdk-typescript.yml
benchmarks/: README.md
benchmarks/evals/sem_search/: task.yml
crates/codegraff-tui/: Cargo.toml  LICENSE
crates/codegraff-tui/src/: logging.rs  main.rs  terminal.rs  text.rs  tool_card.rs
crates/forge_api/: Cargo.toml
crates/forge_api/src/: api.rs  forge_api.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: agent.rs  agent_executor.rs  app.rs  apply_tunable_parameters.rs  command_generator.rs  git_app.rs  infra.rs  lib.rs  operation.rs  orch.rs  services.rs  system_prompt.rs  tool_executor.rs  tool_registry.rs  trajectory_recorder.rs  utils.rs
crates/forge_app/src/fixtures/: git_ls_files_many_extensions.txt
crates/forge_app/src/hooks/: doom_loop.rs  pending_todos.rs  title_generation.rs
crates/forge_app/src/orch_spec/: orch_runner.rs  orch_setup.rs  orch_spec.rs
crates/forge_app/src/snapshots/: forge_app__tool_registry__all_rendered_tool_descriptions.snap
crates/forge_ci/: Cargo.toml
crates/forge_ci/src/: release_matrix.rs
crates/forge_ci/src/jobs/: mod.rs  release_build_job.rs
crates/forge_ci/src/workflows/: ci.rs  mod.rs
crates/forge_ci/tests/: ci.rs
crates/forge_config/: .forge.toml  Cargo.toml
crates/forge_config/src/: compact.rs  config.rs  reasoning.rs  writer.rs
crates/forge_display/: Cargo.toml
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: agent.rs  chat_request.rs  chat_response.rs  context.rs  conversation_html.rs  env.rs  lib.rs  provider.rs  trajectory.rs
crates/forge_domain/src/tools/: catalog.rs  result.rs
crates/forge_domain/src/transformer/: image_handling.rs  transform_tool_calls.rs
crates/forge_embed/: Cargo.toml
crates/forge_eventsource/: Cargo.toml
crates/forge_eventsource_stream/: Cargo.toml
crates/forge_fs/: Cargo.toml
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: env.rs  http.rs  lib.rs  mcp_client.rs  mcp_debug.rs
crates/forge_infra/tests/: mcp_pagination.rs
crates/forge_json_repair/: Cargo.toml
crates/forge_main/: Cargo.toml  build.rs
crates/forge_main/src/: banner  banner.rs  cli.rs  clipboard.rs  debug.rs  editor.rs  highlighter.rs  info.rs  input.rs  lib.rs  logs.rs  main.rs  model.rs  oauth_callback.rs  prompt.rs  title_display.rs  tracker.rs  ui.rs  update.rs  vscode.rs
crates/forge_main/src/zsh/: mod.rs  plugin.rs  rprompt.rs  style.rs
crates/forge_markdown_stream/: Cargo.toml
crates/forge_repo/: Cargo.toml
crates/forge_repo/src/: agent_definition.rs  forge_repo.rs  lib.rs
crates/forge_repo/src/conversation/: conversation_record.rs
crates/forge_repo/src/database/: schema.rs
crates/forge_select/: Cargo.toml
crates/forge_services/: Cargo.toml
crates/forge_services/src/: app_config.rs  context_engine.rs
crates/forge_snaps/: Cargo.toml
crates/forge_spinner/: Cargo.toml
crates/forge_stream/: Cargo.toml
crates/forge_template/: Cargo.toml
crates/forge_test_kit/: Cargo.toml
crates/forge_tool_macros/: Cargo.toml
crates/forge_tracker/: Cargo.toml
crates/forge_tracker/src/: can_track.rs  dispatch.rs  event.rs  lib.rs  log.rs  otel_poc.rs
crates/forge_tui/: Cargo.toml  LICENSE
crates/forge_tui/src/: main.rs
crates/forge_walker/: Cargo.toml
docs/: graff-gpt55-websocket-showcase.md
scripts/: benchmark.sh  install.sh  list-all-porcelain.sh  test-400-error-message.sh  test-zsh-utils.sh
sdk/typescript/: .gitignore  Cargo.toml  README.md  lib.d.ts  lib.js  package-lock.json  package.json
sdk/typescript/examples/: agent-demo.ts  benchmark.ts  compare.ts  session.mjs  smoke.mjs  swarm.ts
sdk/typescript/npm/darwin-arm64/: README.md  package.json
sdk/typescript/npm/darwin-x64/: README.md  package.json
sdk/typescript/npm/linux-arm64-gnu/: README.md  package.json
sdk/typescript/npm/linux-x64-gnu/: README.md  package.json
sdk/typescript/npm/win32-x64-msvc/: README.md  package.json
sdk/typescript/src/: lib.rs  wire.rs
shell-plugin/: README.md  doctor.zsh  forge.setup.zsh  forge.theme.zsh  keyboard.zsh
shell-plugin/lib/: bindings.zsh  completion.zsh  config.zsh
(+33 files in other folders)
