[package]
name = "forge_tracker"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
derive_more.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sysinfo.workspace = true
posthog-rs = "0.5.0"
async-trait.workspace = true
chrono.workspace = true
whoami.workspace = true
convert_case.workspace = true
http.workspace = true
regex.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bstr.workspace = true
forge_domain.workspace = true
lazy_static.workspace = true
dirs.workspace = true

# Platform-specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
machineid-rs.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
lazy_static.workspace = true
pretty_assertions.workspace = true

# OTel POC — for the `otel_shape` test that demonstrates what an OTel
# replacement for the current PostHog event flow would look like. These
# are dev-only for now; if we commit to the migration they move to
# `[dependencies]`.
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-stdout = "0.27"
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
