[package]
name = "forge_walker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ignore.workspace = true
tokio.workspace = true
anyhow.workspace = true
derive_setters.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true